--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=anota-ai-challenge
 
 spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+
+aws.access-key-id=${AWS_ACCESS_KEY_ID}
+aws.secret-access-key=${AWS_SECRET_ACCESS_KEY}
+aws.region=${AWS_REGION}
+aws.sns.topic-arn=${AWS_SNS_TOPIC_ARN}
