feat: implement aws sns service to publish messages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 aws.access-key-id=${AWS_ACCESS_KEY_ID}
 aws.secret-access-key=${AWS_SECRET_ACCESS_KEY}
 aws.region=${AWS_REGION}
-aws.sns.topic-arn=${AWS_SNS_TOPIC_ARN}
+aws.sns.catalog-topic-arn=${AWS_SNS_TOPIC_ARN}
