fix: change product category and services to save categoryId and avoid data synchronicity issues after updates

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
 			<artifactId>aws-java-sdk-sns</artifactId>
 			<version>1.12.787</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20250517</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
